# RendaFixa

./: README.md  main.py  pyproject.toml  simulacao_investimentos.csv
assets/: indicadores.json
